homepage link corrected

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://AntoanetaYordanova.guthub.io/Travelers",
+  "homepage": "https://AntoanetaYordanova.guthub.io/Travelers",
   "name": "client",
   "version": "0.1.0",
   "private": true,
