--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "5.1.3",
+    "classnames": "2.3.1",
     "firebase": "9.9.0",
     "react": "^18.2.0",
     "react-bootstrap": "2.4.0",
